--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "tslint -p tslint.json && tsc",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "compile:server": "webpack --config webpack.server.config.js --progress --colors",
+    "serve:ssr": "node dist/server",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
+    "build:client-and-server-bundles": "ng build --prod && ng run initial-state-ngrx:server:production"
   },
   "private": true,
   "dependencies": {
@@ -19,21 +23,28 @@
     "@angular/fire": "^5.1.2",
     "@angular/flex-layout": "^7.0.0-beta.24",
     "@angular/forms": "~7.1.0",
+    "@angular/http": "~7.1.0",
     "@angular/material": "7.3.7",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
+    "@angular/platform-server": "7.2.15",
+    "@nguniversal/module-map-ngfactory-loader": "0.0.0",
     "@angular/router": "~7.1.0",
     "@ngrx/effects": "^7.4.0",
+    "@ngrx/entity": "^7.4.0",
     "@ngrx/store": "^7.4.0",
     "@ngrx/store-devtools": "^7.4.0",
+    "@nguniversal/express-engine": "^7.1.1",
+    "angular2-uuid": "1.1.1",
     "angularfire2": "^5.1.2",
     "core-js": "^2.5.4",
+    "express": "^4.15.2",
     "firebase": "^5.9.4",
+    "firebase-functions": "2.3.1",
     "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
     "todomvc-app-css": "2.2.0",
     "todomvc-common": "1.0.5",
-    "angular2-uuid": "1.1.1",
+    "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -41,9 +52,10 @@
     "@angular/cli": "~7.1.1",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "bufferutil": "^4.0.1",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -53,8 +65,13 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
+    "ts-loader": "^5.2.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "typescript": "~3.1.6",
+    "utf-8-validate": "^5.0.2",
+    "webpack-cli": "^3.1.0",
+    "ws": "^7.0.0",
+    "xhr2": "^0.1.4"
   }
 }
