--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
     "@angular/material": "7.3.7",
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
-    "@angular/platform-server": "7.2.15",
-    "@nguniversal/module-map-ngfactory-loader": "0.0.0",
+    "@angular/platform-server": "~7.1.0",
     "@angular/router": "~7.1.0",
     "@ngrx/effects": "^7.4.0",
     "@ngrx/entity": "^7.4.0",
     "@ngrx/store": "^7.4.0",
     "@ngrx/store-devtools": "^7.4.0",
     "@nguniversal/express-engine": "^7.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "0.0.0",
     "angular2-uuid": "1.1.1",
     "angularfire2": "^5.1.2",
     "core-js": "^2.5.4",
